add user_handler and route. update swagger. start nextjs
